--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <a href="./public/movie-ranking.html">Movie Ranking Project </h3> <img src="./assets/images/netflix pic.png" height="140"/></a>
     
     
-   <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-    <img src="./assets/images/birthday-invite.png"/>
+   <h3><a href="./public/birthday-invite.html">Birthday Invite Project</h3>
+    <img src="./assets/images/birthday-invite.png"/></a>
 <a href="./public/about.html">About Me</a> <a href="./public/contact.html">Contact Me</a>
 </body>
 </html>
