--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</h3>
     <img src="./assets/images/birthday-invite.png" height="100"/></a>
-<a href="./public/about.html">About Me</a> <a href="./public/contact.html">Contact Me</a><a href="./public/contact.html">Contact Me</a>
+ <a href="./public/contact.html">Contact Me</a><a href="./public/contact.html">Contact Me</a>
 </body>
 </html>
 
