--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     
    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</h3>
-    <img src="./assets/images/birthday-invite.png" height="100"/></a>
+    <img src="./assets/images/birthday-invite.png" height="100"/></a><hr/>
  <a <ul><li>href="./public/about.html">About Me</a></li><ul/> <a href="./public/contact.html">Contact Me</a><a href="./public/contact.html">Contact Me</a>
 </body>
 </html>
