--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     
    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</h3>
     <img src="./assets/images/birthday-invite.png" height="100"/></a><hr/>
- <a href="./public/about.html">About Me</a> <a href="./public/contact.html">Contact Me</a><a href="./public/contact.html">Contact Me</a>
+ <a href="./public/about.html">About Me</a> <a href="./public/contact.html">Contact Me</a><a href="./capstone/index.html">My Resume</a>
+</body>
 </body>
 </html>
 
