--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</h3>
     <img src="./assets/images/birthday-invite.png" height="100"/></a><hr/>
  <a href="./public/about.html">About Me</a> &ThickSpace;&ThickSpace; <a href="./public/contact.html">Contact Me</a> &ThickSpace;&ThickSpace; <a href="./capstone/index.html">My Resume</a>
-</body>
+    <footer>
+    <p>© 2024 Smith Sunday</p>
+  </footer>
 </body>
 </html>
 
